--- a/changelog.txt
+++ b/changelog.txt
@@ -5,11 +5,15 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.0.4 - 07/20/2010 - Aaron Edwards
+----------------------------------------------------------------------
+- Fixed compatibility with WP installs running BP (for good this time hopefully)
+
 1.0.3 - 06/01/2010
 ----------------------------------------------------------------------
 - 3.0+ compatibility update
 
-1.0.2 - 05/18/2009
+1.0.2 - 05/18/2010
 ----------------------------------------------------------------------
 - Now comaptible with WP installs running BP
 
