--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -1,9 +1,13 @@
-Plugin Name: MailChimp
+Plugin Name: MailChimp Sync
 Author: Aaron Edwards and Andrew Billits (Incsub)
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.1.1 - 1/05/2011 - Aaron Edwards
+----------------------------------------------------------------------
+- WP 3.1 Compatibility
 
 1.1 - 12/20/2010 - Aaron Edwards
 ----------------------------------------------------------------------
