--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.1.3 - 4/15/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Limit bulk import query to scale better for large user databases
+
 1.1.2 - 8/05/2011 - Aaron Edwards
 ----------------------------------------------------------------------
 - Add filters for merging additional fields
