--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.3 - 14/03/2013 - Ignacio Cruz
+----------------------------------------------------------------------
+- Fixed some PHP notices when displaying the settings and saving
+http://premium.wpmudev.org/forums/topic/basic-php-errors-turn-on-wp_edbug-to-see
+- Added styles to submit buttons
+
 1.2 - 12/19/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Make deleting WP users remove them from mailchimp: http://wp.mu/77
