--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+
+1.2.3 - 2013/05/06 - Ignacio Cruz
+----------------------------------------------------------------------
+- Added an additional control when subscribing users on a list. If the
+user was already unsubscribed (from the mail link) it won't be subscribed again
+
 1.2.2 - 2013/05/06 - Ignacio Cruz
 ----------------------------------------------------------------------
 - The import feature was using the list on the settings instead the list on the import section
