Fixed error when error log was empty.
http://premium.wpmudev.org/forums/topic/mailchimp-plugin-error-messsage

git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/mailchimp@9222 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.2.4 - 2013/05/14 - Ignacio Cruz
+----------------------------------------------------------------------
+- Fixed error when error log was empty.
+
 1.2.3 - 2013/05/10 - Ignacio Cruz
 ----------------------------------------------------------------------
 - Added an additional control when subscribing users on a list. If the
