--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.3 - 2013/10/03 - Ignacio Cruz
+----------------------------------------------------------------------
+- Added new widget.
+
 1.2.4 - 2013/05/14 - Ignacio Cruz
 ----------------------------------------------------------------------
 - Fixed error when error log was empty.
