--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.4 - 2014-02-11- Ignacio Cruz
+----------------------------------------------------------------------
+- Added shortcode.
+- Ultimate Facebook Integration
+- Code refactored
+- Settings splitted into tabs
+
 1.3 - 2013/10/03 - Ignacio Cruz
 ----------------------------------------------------------------------
 - Added new widget.
