API updated to 2.0 Better error management Other minor improvements
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/mailchimp@14032 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.5 - 2014-04-25
+----------------------------------------------------------------------
+- Mailchimp API updated to 2.0
+- Better errors management
+- Other minor improvements
+
 1.4 - 2014-02-11- Ignacio Cruz
 ----------------------------------------------------------------------
 - Added shortcode.
