Fixed fatal error New release Removed API ping in every load inside admin
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/mailchimp@14044 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -1,9 +1,13 @@
 Plugin Name: MailChimp Sync
-Author: Aaron Edwards (Incsub), Ignacio Cruz (Incsub)
+Author: WPMU DEV
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.5.1 - 2014-04-26
+----------------------------------------------------------------------
+- Plugin triggered a fatal error if the API key was blank
 
 1.5 - 2014-04-25
 ----------------------------------------------------------------------
