- curl functions replaced by wp_remote_* functions in Maiclhimp API - Better errors management - Fixed Javascript conflict - Fixed redirection in import tab to 404 page in single sites
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/mailchimp@14143 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -1,9 +1,18 @@
 Plugin Name: MailChimp Sync
 Author: WPMU DEV
+Requires at least: 3.5
+Tested up to: 3.9
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.6 - 2014-05-02
+----------------------------------------------------------------------
+- curl functions replaced by wp_remote_* functions in Maiclhimp API
+- Better errors management
+- Fixed Javascript conflict
+- Fixed redirection in import tab to 404 page in single sites
 
 1.5.1 - 2014-04-26
 ----------------------------------------------------------------------
