Fixed fatal error
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/mailchimp@14356 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/mailchimp-sync/changelog.txt
+++ b/mailchimp-sync/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.2 - 2014-05-15
+----------------------------------------------------------------------
+- Fixed fatal error
+
 1.6.1 - 2014-05-15
 ----------------------------------------------------------------------
 - Fixed: Widgets issues when there were more than one in the same screen
