Fixed: MailChimp API errors were causing a fatal error.

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.4 - 2014-08-25
+----------------------------------------------------------------------
+- Fixed: MailChimp API errors were causing a fatal error.
+
 1.6.3 - 2014-08-18
 ----------------------------------------------------------------------
 - Enhanced: added prefix to Mailchimp API classes.
