New version Added option that saves the last list imported.

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.5 - 2014-08-28
+----------------------------------------------------------------------
+- Enhanced: Added option that saves the last list imported.
+- Fixed: Fixed typo in Exception classes.
+
 1.6.4 - 2014-08-25
 ----------------------------------------------------------------------
 - Fixed: MailChimp API errors were causing a fatal error.
