Releasing new version

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.6 - 2014-11-10
+----------------------------------------------------------------------
+- Fixed: Users details were not updated in Mailchimp List.
+
 1.6.5 - 2014-08-28
 ----------------------------------------------------------------------
 - Enhanced: Added option that saves the last list imported.
