--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,15 @@
 Plugin Name: MailChimp Sync
 Author: WPMU DEV
 Requires at least: 3.5
-Tested up to: 3.9.2
+Tested up to: 4.1
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.7 - 2014-12-05
+----------------------------------------------------------------------
+- New: Mailchimp Webhooks.
 
 1.6.6 - 2014-11-10
 ----------------------------------------------------------------------
