Releasing new version

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.7.1 - 2014-12-09
+----------------------------------------------------------------------
+- Fixed: Shortcode was always appearing on the top of the content.
+
 1.7 - 2014-12-05
 ----------------------------------------------------------------------
 - New: Mailchimp Webhooks.
