Added message error when a user is already subscribed and confirmed New release

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.7.2 - 2015-03-10
+----------------------------------------------------------------------
+- Fixed: Added message error when a user is already subscribed and confirmed
+
 1.7.1.1 - 2014-12-09
 ----------------------------------------------------------------------
 - Fixed: Undefined constant warning.
