--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.7.3 - 2015-05-29
+----------------------------------------------------------------------
+- Fixed: Warning when bulk subscribing users.
+- Added default arguments for shortcode.
+
 1.7.2 - 2015-03-10
 ----------------------------------------------------------------------
 - Fixed: Added message error when a user is already subscribed and confirmed
