--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,16 @@
 Plugin Name: MailChimp Sync
 Author: WPMU DEV
 Requires at least: 3.5
-Tested up to: 4.1
+Tested up to: 4.3
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.8 - 2015-08-20
+----------------------------------------------------------------------
+- Enhance: Removed user meta to check if it's subscribed to the list in the profile page. Using API instead.
+- Enhance: User Profile Admin styles
 
 1.7.3 - 2015-05-29
 ----------------------------------------------------------------------
