- Fixed: Deprecated widget notice

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.8.1 - 2015-11-25
+----------------------------------------------------------------------
+- Fixed: Deprecated widget notice
+
 1.8 - 2015-08-20
 ----------------------------------------------------------------------
 - Enhance: Removed user meta to check if it's subscribed to the list in the profile page. Using API instead.
