--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,16 @@
 Plugin Name: MailChimp Sync
 Author: WPMU DEV
 Requires at least: 3.5
-Tested up to: 4.3
+Tested up to: 4.6
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.8.2 - 2015-08-29
+----------------------------------------------------------------------
+- Fix: Webhook URL not working on subfolder installation
+- Fix: Warning on activation
 
 1.8.1 - 2015-11-25
 ----------------------------------------------------------------------
