Updated dashboard notification

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.9.0 - 2016-12-19
+----------------------------------------------------------------------
+- Enhance: Updated MailChimp API to 3.0
+- Updated WPMU DEV Dashboard notification
+
 1.8.2 - 2015-08-29
 ----------------------------------------------------------------------
 - Fix: Webhook URL not working on subfolder installation
