--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.9.1 - 2016-12-21
+----------------------------------------------------------------------
+- Fix: Capabilities issue in single installations
+
 1.9.0 - 2016-12-19
 ----------------------------------------------------------------------
 - Enhance: Updated MailChimp API to 3.0
