--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.9.2 - 2016-12-22
+----------------------------------------------------------------------
+- Fix: Fatal error when inserting a wrong API Key
+
 1.9.1 - 2016-12-21
 ----------------------------------------------------------------------
 - Fix: Capabilities issue in single installations
