--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,15 @@
 Plugin Name: MailChimp Sync
 Author: WPMU DEV
 Requires at least: 3.5
-Tested up to: 4.6
+Tested up to: 4.7
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+1.9.2 - 2017-01-13
+----------------------------------------------------------------------
+- Added filter to modify the MailChimp API request parameters
 
 1.9.1 - 2016-12-21
 ----------------------------------------------------------------------
