--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.9.3 - 2017-07-11
+----------------------------------------------------------------------
+- Fix: Fatal error when using widget/shortcode
+
 1.9.2 - 2017-01-13
 ----------------------------------------------------------------------
 - Added filter to modify the MailChimp API request parameters
