--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.9.6 - 2017-09-04
+----------------------------------------------------------------------
+- Fix: conflict with WooCommerce plugin
+
 1.9.4 - 2017-07-11
 ----------------------------------------------------------------------
 - Fix: Fatal error when using widget/shortcode
