--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@ Tested up to: 4.8
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+1.9.7 - 2017-11-01
+- Fix: Deprecated code
 
 1.9.6 - 2017-09-04
 ----------------------------------------------------------------------
